feat(auth): current logged in user implemented
